// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TF Config Form tests edit view loads correctly -with commitId 1`] = `
<div>
  <div
    class="Layout--vertical StyledProps--main"
  >
    <div
      class="OverlaySpinner--overlaySpinner"
    >
      <div
        class="Layout--vertical StyledProps--main"
      >
        <form>
          <div
            class="connectorLabel"
            style="margin-bottom: 10px;"
          >
            <div
              class="StyledProps--font StyledProps--main"
              style="margin-bottom: 5px;"
            >
              <span
                class="Tooltip--acenter bp3-label"
                data-tooltip-id="tfPlanConfigForm_spec.configuration.configFiles.store.spec.connectorRef"
              >
                connector
              </span>
            </div>
            <div
              style="display: flex; align-items: center;"
            >
              <div
                class="bp3-form-group"
                style="margin-bottom: 0px;"
              >
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="Layout--horizontal StyledProps--main MultiTypeInput--main"
                    style="width: 260px;"
                  >
                    <button
                      class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main container Button--iconOnly Button--without-shadow Button--withRightIcon"
                      data-testid="cr-field-spec.configuration.configFiles.store.spec.connectorRef"
                      style="width: 260px;"
                      type="button"
                    >
                      <span
                        class="bp3-button-text"
                      >
                        <div
                          class="Layout--horizontal Layout--layout-spacing-small StyledProps--main selectWrapper StyledProps--flex StyledProps--flex-distribution-space-between"
                        >
                          <span
                            class="bp3-popover-wrapper"
                          >
                            <span
                              class="bp3-popover-target"
                            >
                              <p
                                class="StyledProps--font StyledProps--main label StyledProps--color StyledProps--color-grey800"
                                tabindex="0"
                              >
                                Git5
                              </p>
                            </span>
                          </span>
                          <div
                            class="rightStatus"
                          >
                            <span
                              class="bp3-icon bp3-icon-full-circle StyledProps--main status redStatus"
                              data-testid="crf-status"
                              icon="full-circle"
                            >
                              <svg
                                data-icon="full-circle"
                                height="6"
                                viewBox="0 0 16 16"
                                width="6"
                              >
                                <desc>
                                  full-circle
                                </desc>
                                <path
                                  d="M8 0a8 8 0 100 16A8 8 0 108 0z"
                                  fill-rule="evenodd"
                                />
                              </svg>
                            </span>
                            <span
                              class="Tag--main"
                            >
                              <span
                                class="bp3-tag bp3-minimal tag"
                              >
                                <span
                                  class="bp3-text-overflow-ellipsis bp3-fill"
                                >
                                  project
                                </span>
                              </span>
                            </span>
                          </div>
                        </div>
                      </span>
                      <span
                        class="bp3-icon bp3-icon-chevron-down StyledProps--main"
                        icon="chevron-down"
                      >
                        <svg
                          data-icon="chevron-down"
                          height="14"
                          viewBox="0 0 16 16"
                          width="14"
                        >
                          <desc>
                            chevron-down
                          </desc>
                          <path
                            d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                    </button>
                    <span
                      class="bp3-popover-wrapper MultiTypeInput--wrapper"
                    >
                      <span
                        class="bp3-popover-target"
                      >
                        <button
                          class="MultiTypeInput--btn MultiTypeInput--FIXED"
                        >
                          <span
                            class="bp3-icon StyledProps--main"
                            data-icon="fixed-input"
                          >
                            <svg
                              height="12"
                              viewBox="0 0 9 9"
                              width="12"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                                fill="currentColor"
                              />
                            </svg>
                          </span>
                        </button>
                      </span>
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="formGroup md"
          >
            <div
              class="bp3-form-group"
            >
              <label
                class="bp3-label"
                for="spec.configuration.configFiles.store.spec.gitFetchType"
              >
                <span
                  class="Tooltip--acenter"
                  data-tooltip-id="tfPlanConfigForm_spec.configuration.configFiles.store.spec.gitFetchType"
                >
                  pipeline.manifestType.gitFetchTypeLabel
                </span>
                 
                <span
                  class="bp3-text-muted"
                />
              </label>
              <div
                class="bp3-form-content"
              >
                <div
                  class="bp3-popover-wrapper Select--main bp3-fill"
                >
                  <div
                    class="bp3-popover-target"
                  >
                    <div
                      class="bp3-input-group"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        name="spec.configuration.configFiles.store.spec.gitFetchType"
                        placeholder="- pipeline.manifestType.gitFetchTypeLabel -"
                        style="padding-right: 0px;"
                        type="text"
                        value="gitFetchTypes.fromCommit"
                      />
                      <span
                        class="bp3-input-action"
                      >
                        <span
                          class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                          icon="chevron-down"
                        >
                          <svg
                            data-icon="chevron-down"
                            height="14"
                            viewBox="0 0 16 16"
                            width="14"
                          >
                            <desc>
                              chevron-down
                            </desc>
                            <path
                              d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="formGroup md"
          >
            <div
              class="bp3-form-group"
            >
              <label
                class="bp3-label"
                for="spec.configuration.configFiles.store.spec.commitId"
              >
                <span
                  class="Tooltip--acenter"
                  data-tooltip-id="tfPlanConfigForm_spec.configuration.configFiles.store.spec.commitId"
                >
                  pipeline.manifestType.commitId
                </span>
                 
                <span
                  class="bp3-text-muted"
                />
              </label>
              <div
                class="bp3-form-content"
              >
                <div
                  class="Layout--horizontal StyledProps--main MultiTypeInput--main"
                >
                  <div
                    class="bp3-input-group MultiTypeInput--input"
                  >
                    <input
                      autocomplete="off"
                      class="bp3-input"
                      name="spec.configuration.configFiles.store.spec.commitId"
                      placeholder="pipeline.manifestType.commitPlaceholder"
                      type="text"
                      value="test-commit"
                    />
                  </div>
                  <span
                    class="bp3-popover-wrapper MultiTypeInput--wrapper"
                  >
                    <span
                      class="bp3-popover-target"
                    >
                      <button
                        class="MultiTypeInput--btn MultiTypeInput--FIXED"
                      >
                        <span
                          class="bp3-icon StyledProps--main"
                          data-icon="fixed-input"
                        >
                          <svg
                            height="12"
                            viewBox="0 0 9 9"
                            width="12"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                              fill="currentColor"
                            />
                          </svg>
                        </span>
                      </button>
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div
            class="formGroup md"
          >
            <div
              class="bp3-form-group"
            >
              <label
                class="bp3-label"
                for="spec.configuration.configFiles.store.spec.folderPath"
              >
                <span
                  class="Tooltip--acenter"
                  data-tooltip-id="tfPlanConfigForm_spec.configuration.configFiles.store.spec.folderPath"
                >
                  cd.folderPath
                </span>
                 
                <span
                  class="bp3-text-muted"
                />
              </label>
              <div
                class="bp3-form-content"
              >
                <div
                  class="Layout--horizontal StyledProps--main MultiTypeInput--main"
                >
                  <div
                    class="bp3-input-group MultiTypeInput--input"
                  >
                    <input
                      autocomplete="off"
                      class="bp3-input"
                      name="spec.configuration.configFiles.store.spec.folderPath"
                      placeholder="pipeline.manifestType.pathPlaceholder"
                      type="text"
                      value="test-folder"
                    />
                  </div>
                  <span
                    class="bp3-popover-wrapper MultiTypeInput--wrapper"
                  >
                    <span
                      class="bp3-popover-target"
                    >
                      <button
                        class="MultiTypeInput--btn MultiTypeInput--FIXED"
                      >
                        <span
                          class="bp3-icon StyledProps--main"
                          data-icon="fixed-input"
                        >
                          <svg
                            height="12"
                            viewBox="0 0 9 9"
                            width="12"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                              fill="currentColor"
                            />
                          </svg>
                        </span>
                      </button>
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div
            class="StyledProps--font StyledProps--main StyledProps--padding-top-xlarge StyledProps--flex"
            style="width: 200px;"
          >
            <button
              class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--variation Button--variation-primary"
              type="submit"
            >
              <span
                class="bp3-button-text"
              >
                submit
              </span>
            </button>
            <button
              class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--variation Button--variation-secondary"
              type="button"
            >
              <span
                class="bp3-button-text"
              >
                cancel
              </span>
            </button>
          </div>
        </form>
      </div>
    </div>
  </div>
</div>
`;

exports[`TF Config Form tests edit view loads correctly 1`] = `
<div>
  <div
    class="Layout--vertical StyledProps--main"
  >
    <div
      class="OverlaySpinner--overlaySpinner"
    >
      <div
        class="Layout--vertical StyledProps--main"
      >
        <form>
          <div
            class="connectorLabel"
            style="margin-bottom: 10px;"
          >
            <div
              class="StyledProps--font StyledProps--main"
              style="margin-bottom: 5px;"
            >
              <span
                class="Tooltip--acenter bp3-label"
                data-tooltip-id="tfPlanConfigForm_spec.configuration.configFiles.store.spec.connectorRef"
              >
                connector
              </span>
            </div>
            <div
              style="display: flex; align-items: center;"
            >
              <div
                class="bp3-form-group"
                style="margin-bottom: 0px;"
              >
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="Layout--horizontal StyledProps--main MultiTypeInput--main"
                    style="width: 260px;"
                  >
                    <button
                      class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main container Button--iconOnly Button--without-shadow Button--withRightIcon"
                      data-testid="cr-field-spec.configuration.configFiles.store.spec.connectorRef"
                      style="width: 260px;"
                      type="button"
                    >
                      <span
                        class="bp3-button-text"
                      >
                        <div
                          class="Layout--horizontal Layout--layout-spacing-small StyledProps--main selectWrapper StyledProps--flex StyledProps--flex-distribution-space-between"
                        >
                          <span
                            class="bp3-popover-wrapper"
                          >
                            <span
                              class="bp3-popover-target"
                            >
                              <p
                                class="StyledProps--font StyledProps--main label StyledProps--color StyledProps--color-grey800"
                                tabindex="0"
                              >
                                Git5
                              </p>
                            </span>
                          </span>
                          <div
                            class="rightStatus"
                          >
                            <span
                              class="bp3-icon bp3-icon-full-circle StyledProps--main status redStatus"
                              data-testid="crf-status"
                              icon="full-circle"
                            >
                              <svg
                                data-icon="full-circle"
                                height="6"
                                viewBox="0 0 16 16"
                                width="6"
                              >
                                <desc>
                                  full-circle
                                </desc>
                                <path
                                  d="M8 0a8 8 0 100 16A8 8 0 108 0z"
                                  fill-rule="evenodd"
                                />
                              </svg>
                            </span>
                            <span
                              class="Tag--main"
                            >
                              <span
                                class="bp3-tag bp3-minimal tag"
                              >
                                <span
                                  class="bp3-text-overflow-ellipsis bp3-fill"
                                >
                                  project
                                </span>
                              </span>
                            </span>
                          </div>
                        </div>
                      </span>
                      <span
                        class="bp3-icon bp3-icon-chevron-down StyledProps--main"
                        icon="chevron-down"
                      >
                        <svg
                          data-icon="chevron-down"
                          height="14"
                          viewBox="0 0 16 16"
                          width="14"
                        >
                          <desc>
                            chevron-down
                          </desc>
                          <path
                            d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                    </button>
                    <span
                      class="bp3-popover-wrapper MultiTypeInput--wrapper"
                    >
                      <span
                        class="bp3-popover-target"
                      >
                        <button
                          class="MultiTypeInput--btn MultiTypeInput--FIXED"
                        >
                          <span
                            class="bp3-icon StyledProps--main"
                            data-icon="fixed-input"
                          >
                            <svg
                              height="12"
                              viewBox="0 0 9 9"
                              width="12"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                                fill="currentColor"
                              />
                            </svg>
                          </span>
                        </button>
                      </span>
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="formGroup md"
          >
            <div
              class="bp3-form-group"
            >
              <label
                class="bp3-label"
                for="spec.configuration.configFiles.store.spec.gitFetchType"
              >
                <span
                  class="Tooltip--acenter"
                  data-tooltip-id="tfPlanConfigForm_spec.configuration.configFiles.store.spec.gitFetchType"
                >
                  pipeline.manifestType.gitFetchTypeLabel
                </span>
                 
                <span
                  class="bp3-text-muted"
                />
              </label>
              <div
                class="bp3-form-content"
              >
                <div
                  class="bp3-popover-wrapper Select--main bp3-fill"
                >
                  <div
                    class="bp3-popover-target"
                  >
                    <div
                      class="bp3-input-group"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        name="spec.configuration.configFiles.store.spec.gitFetchType"
                        placeholder="- pipeline.manifestType.gitFetchTypeLabel -"
                        style="padding-right: 0px;"
                        type="text"
                        value="gitFetchTypes.fromBranch"
                      />
                      <span
                        class="bp3-input-action"
                      >
                        <span
                          class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                          icon="chevron-down"
                        >
                          <svg
                            data-icon="chevron-down"
                            height="14"
                            viewBox="0 0 16 16"
                            width="14"
                          >
                            <desc>
                              chevron-down
                            </desc>
                            <path
                              d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="formGroup md"
          >
            <div
              class="bp3-form-group"
            >
              <label
                class="bp3-label"
                for="spec.configuration.configFiles.store.spec.branch"
              >
                <span
                  class="Tooltip--acenter"
                  data-tooltip-id="tfPlanConfigForm_spec.configuration.configFiles.store.spec.branch"
                >
                  pipelineSteps.deploy.inputSet.branch
                </span>
                 
                <span
                  class="bp3-text-muted"
                />
              </label>
              <div
                class="bp3-form-content"
              >
                <div
                  class="Layout--horizontal StyledProps--main MultiTypeInput--main"
                >
                  <div
                    class="bp3-input-group MultiTypeInput--input"
                  >
                    <input
                      autocomplete="off"
                      class="bp3-input"
                      name="spec.configuration.configFiles.store.spec.branch"
                      placeholder="pipeline.manifestType.branchPlaceholder"
                      type="text"
                      value="test-branch"
                    />
                  </div>
                  <span
                    class="bp3-popover-wrapper MultiTypeInput--wrapper"
                  >
                    <span
                      class="bp3-popover-target"
                    >
                      <button
                        class="MultiTypeInput--btn MultiTypeInput--FIXED"
                      >
                        <span
                          class="bp3-icon StyledProps--main"
                          data-icon="fixed-input"
                        >
                          <svg
                            height="12"
                            viewBox="0 0 9 9"
                            width="12"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                              fill="currentColor"
                            />
                          </svg>
                        </span>
                      </button>
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div
            class="formGroup md"
          >
            <div
              class="bp3-form-group"
            >
              <label
                class="bp3-label"
                for="spec.configuration.configFiles.store.spec.folderPath"
              >
                <span
                  class="Tooltip--acenter"
                  data-tooltip-id="tfPlanConfigForm_spec.configuration.configFiles.store.spec.folderPath"
                >
                  cd.folderPath
                </span>
                 
                <span
                  class="bp3-text-muted"
                />
              </label>
              <div
                class="bp3-form-content"
              >
                <div
                  class="Layout--horizontal StyledProps--main MultiTypeInput--main"
                >
                  <div
                    class="bp3-input-group MultiTypeInput--input"
                  >
                    <input
                      autocomplete="off"
                      class="bp3-input"
                      name="spec.configuration.configFiles.store.spec.folderPath"
                      placeholder="pipeline.manifestType.pathPlaceholder"
                      type="text"
                      value="test-folder"
                    />
                  </div>
                  <span
                    class="bp3-popover-wrapper MultiTypeInput--wrapper"
                  >
                    <span
                      class="bp3-popover-target"
                    >
                      <button
                        class="MultiTypeInput--btn MultiTypeInput--FIXED"
                      >
                        <span
                          class="bp3-icon StyledProps--main"
                          data-icon="fixed-input"
                        >
                          <svg
                            height="12"
                            viewBox="0 0 9 9"
                            width="12"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                              fill="currentColor"
                            />
                          </svg>
                        </span>
                      </button>
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div
            class="StyledProps--font StyledProps--main StyledProps--padding-top-xlarge StyledProps--flex"
            style="width: 200px;"
          >
            <button
              class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--variation Button--variation-primary"
              type="submit"
            >
              <span
                class="bp3-button-text"
              >
                submit
              </span>
            </button>
            <button
              class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--variation Button--variation-secondary"
              type="button"
            >
              <span
                class="bp3-button-text"
              >
                cancel
              </span>
            </button>
          </div>
        </form>
      </div>
    </div>
  </div>
</div>
`;

exports[`TF Config Form tests initial render 1`] = `
<div>
  <div
    class="Layout--vertical StyledProps--main"
  >
    <div
      class="OverlaySpinner--overlaySpinner"
    >
      <div
        class="Layout--vertical StyledProps--main"
      >
        <form>
          <div
            class="connectorLabel"
            style="margin-bottom: 10px;"
          >
            <div
              class="StyledProps--font StyledProps--main"
              style="margin-bottom: 5px;"
            >
              <span
                class="Tooltip--acenter bp3-label"
                data-tooltip-id="tfPlanConfigForm_spec.configuration.configFiles.store.spec.connectorRef"
              >
                connector
              </span>
            </div>
            <div
              style="display: flex; align-items: center;"
            >
              <div
                class="bp3-form-group"
                style="margin-bottom: 0px;"
              >
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="Layout--horizontal StyledProps--main MultiTypeInput--main"
                    style="width: 260px;"
                  >
                    <button
                      class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main container Button--iconOnly Button--without-shadow Button--withRightIcon"
                      data-testid="cr-field-spec.configuration.configFiles.store.spec.connectorRef"
                      style="width: 260px;"
                      type="button"
                    >
                      <span
                        class="bp3-button-text"
                      >
                        <div
                          class="Layout--horizontal Layout--layout-spacing-small StyledProps--main selectWrapper StyledProps--flex StyledProps--flex-distribution-space-between"
                        >
                          <span
                            class="bp3-popover-wrapper"
                          >
                            <span
                              class="bp3-popover-target"
                            >
                              <p
                                class="StyledProps--font StyledProps--main label StyledProps--color StyledProps--color-grey800"
                                tabindex="0"
                              >
                                Git5
                              </p>
                            </span>
                          </span>
                          <div
                            class="rightStatus"
                          >
                            <span
                              class="bp3-icon bp3-icon-full-circle StyledProps--main status redStatus"
                              data-testid="crf-status"
                              icon="full-circle"
                            >
                              <svg
                                data-icon="full-circle"
                                height="6"
                                viewBox="0 0 16 16"
                                width="6"
                              >
                                <desc>
                                  full-circle
                                </desc>
                                <path
                                  d="M8 0a8 8 0 100 16A8 8 0 108 0z"
                                  fill-rule="evenodd"
                                />
                              </svg>
                            </span>
                            <span
                              class="Tag--main"
                            >
                              <span
                                class="bp3-tag bp3-minimal tag"
                              >
                                <span
                                  class="bp3-text-overflow-ellipsis bp3-fill"
                                >
                                  project
                                </span>
                              </span>
                            </span>
                          </div>
                        </div>
                      </span>
                      <span
                        class="bp3-icon bp3-icon-chevron-down StyledProps--main"
                        icon="chevron-down"
                      >
                        <svg
                          data-icon="chevron-down"
                          height="14"
                          viewBox="0 0 16 16"
                          width="14"
                        >
                          <desc>
                            chevron-down
                          </desc>
                          <path
                            d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                    </button>
                    <span
                      class="bp3-popover-wrapper MultiTypeInput--wrapper"
                    >
                      <span
                        class="bp3-popover-target"
                      >
                        <button
                          class="MultiTypeInput--btn MultiTypeInput--FIXED"
                        >
                          <span
                            class="bp3-icon StyledProps--main"
                            data-icon="fixed-input"
                          >
                            <svg
                              height="12"
                              viewBox="0 0 9 9"
                              width="12"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                                fill="currentColor"
                              />
                            </svg>
                          </span>
                        </button>
                      </span>
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="formGroup md"
          >
            <div
              class="bp3-form-group"
            >
              <label
                class="bp3-label"
                for="spec.configuration.configFiles.store.spec.gitFetchType"
              >
                <span
                  class="Tooltip--acenter"
                  data-tooltip-id="tfPlanConfigForm_spec.configuration.configFiles.store.spec.gitFetchType"
                >
                  pipeline.manifestType.gitFetchTypeLabel
                </span>
                 
                <span
                  class="bp3-text-muted"
                />
              </label>
              <div
                class="bp3-form-content"
              >
                <div
                  class="bp3-popover-wrapper Select--main bp3-fill"
                >
                  <div
                    class="bp3-popover-target"
                  >
                    <div
                      class="bp3-input-group"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        name="spec.configuration.configFiles.store.spec.gitFetchType"
                        placeholder="- pipeline.manifestType.gitFetchTypeLabel -"
                        style="padding-right: 0px;"
                        type="text"
                        value=""
                      />
                      <span
                        class="bp3-input-action"
                      >
                        <span
                          class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                          icon="chevron-down"
                        >
                          <svg
                            data-icon="chevron-down"
                            height="14"
                            viewBox="0 0 16 16"
                            width="14"
                          >
                            <desc>
                              chevron-down
                            </desc>
                            <path
                              d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="formGroup md"
          >
            <div
              class="bp3-form-group"
            >
              <label
                class="bp3-label"
                for="spec.configuration.configFiles.store.spec.folderPath"
              >
                <span
                  class="Tooltip--acenter"
                  data-tooltip-id="tfPlanConfigForm_spec.configuration.configFiles.store.spec.folderPath"
                >
                  cd.folderPath
                </span>
                 
                <span
                  class="bp3-text-muted"
                />
              </label>
              <div
                class="bp3-form-content"
              >
                <div
                  class="Layout--horizontal StyledProps--main MultiTypeInput--main"
                >
                  <div
                    class="bp3-input-group MultiTypeInput--input"
                  >
                    <input
                      autocomplete="off"
                      class="bp3-input"
                      name="spec.configuration.configFiles.store.spec.folderPath"
                      placeholder="pipeline.manifestType.pathPlaceholder"
                      type="text"
                      value=""
                    />
                  </div>
                  <span
                    class="bp3-popover-wrapper MultiTypeInput--wrapper"
                  >
                    <span
                      class="bp3-popover-target"
                    >
                      <button
                        class="MultiTypeInput--btn MultiTypeInput--FIXED"
                      >
                        <span
                          class="bp3-icon StyledProps--main"
                          data-icon="fixed-input"
                        >
                          <svg
                            height="12"
                            viewBox="0 0 9 9"
                            width="12"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                              fill="currentColor"
                            />
                          </svg>
                        </span>
                      </button>
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div
            class="StyledProps--font StyledProps--main StyledProps--padding-top-xlarge StyledProps--flex"
            style="width: 200px;"
          >
            <button
              class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--variation Button--variation-primary"
              type="submit"
            >
              <span
                class="bp3-button-text"
              >
                submit
              </span>
            </button>
            <button
              class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--variation Button--variation-secondary"
              type="button"
            >
              <span
                class="bp3-button-text"
              >
                cancel
              </span>
            </button>
          </div>
        </form>
      </div>
    </div>
  </div>
</div>
`;
